# Duck_Nodes

./: LICENSE.txt  README.md  __init__.py  duck_nodes.py  login.html  password.py  pyproject.toml  requirements.txt  workflow.json
web/js/: duck_nodes_settings.js
