[project]
name = "Duck_Nodes"
description = "Load data from Google Sheets, Google Docs, Excel, Word, and TXT with built-in login system for ComfyUI."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["pandas", "requests", "openpyxl", "python-docx", "aiohttp_session", "bcrypt", "Jinja2"]

[project.urls]
Repository = "https://github.com/duckmartians/Duck_Nodes"

[tool.comfy]
PublisherId = "duckmartians"
DisplayName = "Duck_Nodes"
Icon = ""
includes = []
