[project]
name = "Duck_Nodes"
description = "Refactoring Source Code and Security Enhancement."
version = "1.0.1"
license = {file = "LICENSE"}
dependencies = ["pandas", "requests", "openpyxl", "python-docx", "aiohttp_session", "bcrypt", "Jinja2"]

[project.urls]
Repository = "https://github.com/duckmartians/Duck_Nodes"

[tool.comfy]
PublisherId = "duckmartians"
DisplayName = "Duck_Nodes"
Icon = ""
includes = []
