[project]
name = "Duck_Nodes"
description = "Load data from Google Sheets, Google Docs, Excel, Word and TXT... Built-in login system for ComfyUI."
version = "1.1.3"
license = {file = "LICENSE"}
dependencies = ["pandas", "requests", "openpyxl", "python-docx", "aiohttp_session", "bcrypt", "Jinja2"]

[project.urls]
Repository = "https://github.com/duckmartians/Duck_Nodes"

[tool.comfy]
PublisherId = "duckmartians"
DisplayName = "Duck_Nodes"
Icon = "https://raw.githubusercontent.com/duckmartians/Duck_Nodes/refs/heads/main/images/icon.png"
includes = []
